# pi-n-hole

./: .gitignore  .pre-commit-config.yaml  COPYING  README.md  pyproject.toml
pinhole/: __main__.py  camera.py  touch.py
